[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pip-ext"
version = "0.0.1"
authors = [
  { name="Volodymyr Horshenin" },
]
description = "Some extensions to the `pip` Python package manager."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'requests',
  'setuptools'
]

[project.urls]
Homepage = "https://github.com/l1asis/pip-ext"
Issues = "https://github.com/l1asis/pip-ext/issues"

[project.scripts]
pip-ext = "pip_ext:main"